force-app/main/default/objects/CNT_ApiConfiguration__c/CNT_ApiConfiguration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom Setting to handle api calls</description>
    <label>API Configuration</label>
</CustomObject>