force-app/main/default/objects/CNT_ApiConfiguration__c/fields/CNT_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>CNT_Endpoint__c</fullName>
    <description>Endpoint of the service</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Endpoint of the service</inlineHelpText>
    <label>Endpoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>