force-app/main/default/objects/CNT_ApiConfiguration__c/fields/CNT_HTTPMethod__c.field-meta.xml
<CustomField>
    <fullName>CNT_HTTPMethod__c</fullName>
    <description>Http Method of the service</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Http Method of the service</inlineHelpText>
    <label>HTTP Method</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>