force-app/main/default/objects/CNT_ApiConfiguration__c/fields/CNT_Service__c.field-meta.xml
<CustomField>
    <fullName>CNT_Service__c</fullName>
    <description>Service of the endpoint</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Service of the endpoint</inlineHelpText>
    <label>Service</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>