force-app/main/default/objects/CNT_ApiConfiguration__c/fields/CNT_Service_URI__c.field-meta.xml
<CustomField>
    <fullName>CNT_Service_URI__c</fullName>
    <description>URI of the service</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>URI of the service</inlineHelpText>
    <label>Service URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>