force-app/main/default/objects/CNT_ApiConfiguration__c/fields/tokenPlatform__c.field-meta.xml
<CustomField>
    <fullName>tokenPlatform__c</fullName>
    <description>Indicates if the platform is GTS or SANDIGITAL</description>
    <encryptionScheme>None</encryptionScheme>
    <label>tokenPlatform</label>
    <length>10</length>
    <type>Text</type>
</CustomField>