force-app/main/default/objects/CNT_ApiConfiguration__c/fields/tokenUser__c.field-meta.xml
<CustomField>
    <fullName>tokenUser__c</fullName>
    <description>Indicates if the user is nexus, local or platform</description>
    <encryptionScheme>None</encryptionScheme>
    <label>tokenUser</label>
    <length>10</length>
    <type>Text</type>
</CustomField>