force-app/main/default/objects/CNT_ApiConfiguration__c/listViews/View_API_Configuration.listView-meta.xml
<ListView>
    <fullName>View_API_Configuration</fullName>
    <columns>NAME</columns>
    <columns>CNT_HTTPMethod__c</columns>
    <columns>CNT_Endpoint__c</columns>
    <columns>tokenPlatform__c</columns>
    <columns>tokenUser__c</columns>
    <filterScope>Everything</filterScope>
    <label>View_API_Configuration</label>
    <language>en_US</language>
</ListView>